# internal/model/text.go
@@ -1,5 +1,6 @@
 package model
 
 type Text struct {
-	Text string `json:"text"`
+	Text          []string `json:"text"`
+	CoupletNumber int      `json:"couplet_number"`
 }
